now order quantity is displaying for each type of it

--- a/src/templates/navbar/navbar_parts/user_menu.html
+++ b/src/templates/navbar/navbar_parts/user_menu.html
@@ -11,7 +11,7 @@
             <li>
                 <button type="button" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     Orders
-                    <span class="badge text-bg-secondary">{{ request.rented_thing_count }}</span>
+                    <span class="badge text-bg-secondary">{{ request.sum_count }}</span>
                 </button>
             </li>
             <hr class="dropdown-divider">
