--- a/src/templates/navbar/navbar_parts/order_modal.html
+++ b/src/templates/navbar/navbar_parts/order_modal.html
@@ -8,26 +8,35 @@
             </div>
             <div class="modal-body">
                 <ol class="list-group list-group-numbered">
-                    <a href="{% url 'console_order_list' %}" class="list-group-item d-flex justify-content-between align-items-start">
+                    <a href="{% url 'console_order_list' %}"
+                       class="list-group-item d-flex justify-content-between align-items-start">
                         <div class="ms-2 me-auto">
-                            <div class="fw-bold">Console</div>
-{#                            Content for list item#}
+                            <div class="fw-bold">Console
+                                <span class="badge text-bg-secondary">{{ request.rented_console_count }}</span>
+                            </div>
+                            {#                            Content for list item#}
                         </div>
-{#                        <span class="badge bg-primary rounded-pill">14</span>#}
+                        {#                        <span class="badge bg-primary rounded-pill">14</span>#}
                     </a>
-                    <a href="{% url 'room_order_list' %}" class="list-group-item d-flex justify-content-between align-items-start">
+                    <a href="{% url 'room_order_list' %}"
+                       class="list-group-item d-flex justify-content-between align-items-start">
                         <div class="ms-2 me-auto">
-                            <div class="fw-bold">Room</div>
-{#                            Content for list item#}
+                            <div class="fw-bold">Room
+                                <span class="badge text-bg-secondary">{{ request.rented_room_count }}</span>
+                            </div>
+                            {#                            Content for list item#}
                         </div>
-{#                        <span class="badge bg-primary rounded-pill">14</span>#}
+                        {#                        <span class="badge bg-primary rounded-pill">14</span>#}
                     </a>
-                    <a href="{% url 'club_order_list' %}" class="list-group-item d-flex justify-content-between align-items-start">
+                    <a href="{% url 'club_order_list' %}"
+                       class="list-group-item d-flex justify-content-between align-items-start">
                         <div class="ms-2 me-auto">
-                            <div class="fw-bold">Order</div>
-{#                            Content for list item#}
+                            <div class="fw-bold">Club
+                                <span class="badge text-bg-secondary">{{ request.rented_club_count }}</span>
+                            </div>
+                            {#                            Content for list item#}
                         </div>
-{#                        <span class="badge bg-primary rounded-pill">14</span>#}
+                        {#                        <span class="badge bg-primary rounded-pill">14</span>#}
                     </a>
                 </ol>
             </div>
