--- a/src/apps/rent/templates/rent/orders/clubs/filter.html
+++ b/src/apps/rent/templates/rent/orders/clubs/filter.html
@@ -6,6 +6,6 @@
     {{ filter_form|crispy }}
     <div class="d-flex justify-content-between">
         <button class="btn btn-outline-success" type="submit">Search</button>
-        <a class="btn btn-outline-danger" href="{% url 'console_order_list' %}">Reset</a>
+        <a class="btn btn-outline-danger" href="{% url 'club_order_list' %}">Reset</a>
     </div>
 </form>
