fixed filter for rent objects (2)

--- a/src/apps/rent/templates/rent/orders/consoles/console_order_list.html
+++ b/src/apps/rent/templates/rent/orders/consoles/console_order_list.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{% static 'rent/static/css/rent/rent.css' %}">
 {% endblock %}
 
-{% block title %}Rent-Orders{% endblock %}
+{% block title %}Console orders{% endblock %}
 
 {% block leftsidebar %}
     {% include 'rent/orders/consoles/filter.html' %}
