added filter for purchases

--- a/src/apps/shop/templates/product/product.html
+++ b/src/apps/shop/templates/product/product.html
@@ -13,7 +13,7 @@
                 <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#product-{{ product.id }}">Buy
                 </button>
                 <a href="#" class="btn btn-secondary">Into the basket</a>
-                {% include "product_modal.html" %}
+                {% include "product/product_modal.html" %}
             </div>
         </div>
     </div>
