--- a/src/apps/shop/templates/product/about_product.html
+++ b/src/apps/shop/templates/product/about_product.html
@@ -29,7 +29,7 @@
                         Buy
                     </button>
                     <a href="#" class="btn btn-secondary">Into the basket</a>
-                    {% include "product_modal.html" %}
+                    {% include "product/product_modal.html" %}
                 </div>
             </div>
         </div>
