--- a/src/apps/shop/templates/product/product_list.html
+++ b/src/apps/shop/templates/product/product_list.html
@@ -19,7 +19,7 @@
 {% block content %}
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
         {% for product in products %}
-            {% include 'product.html' %}
+            {% include 'product/product.html' %}
         {% endfor %}
     </div>
 {% endblock %}
