added filter for products

--- a/src/apps/shop/templates/product/product_list.html
+++ b/src/apps/shop/templates/product/product_list.html
@@ -11,6 +11,7 @@
 {% block title %}Shop{% endblock %}
 
 {% block leftsidebar %}
+    {% include 'product/product_filter.html' %}
 {% endblock %}
 
 {% block breadcrumb %}
