--- a/src/apps/news/templates/news_list.html
+++ b/src/apps/news/templates/news_list.html
@@ -14,6 +14,7 @@
 {% endblock %}
 
 {% block content %}
+    <h1>News</h1>
     <div class="container p-2">
         {% include "pagination.html" %}
         <div class="row row-cols-1 justify-content-center pb-2">
