--- a/src/apps/shop/templates/purchase/purchase_list.html
+++ b/src/apps/shop/templates/purchase/purchase_list.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Purchases</h1>
+    <h1>Completed purchases</h1>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
         {% for purchase in purchases %}
             {% include 'purchase/purchase.html' %}
