--- a/src/templates/navbar/navbar.html
+++ b/src/templates/navbar/navbar.html
@@ -1,47 +1,17 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
     <div class="container-fluid">
-        {% include 'navbar/navbar_parts/navbar-brand.html' %}
+        {% include 'navbar/navbar_parts/brand.html' %}
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'news_list' %}">News</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'shop:product_list' %}">Shop</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                       aria-expanded="false">
-                        Rent
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{% url 'console_list' %}">Consoles</a></li>
-                        <li><a class="dropdown-item" href="{% url 'room_list' %}">Rooms</a></li>
-                        {#                        <li>#}
-                        {#                            <hr class="dropdown-divider">#}
-                        {#                        </li>#}
-                        <li><a class="dropdown-item" href="{% url 'club_list' %}">Clubs</a></li>
-                    </ul>
-                </li>
-                {#                <li class="nav-item">#}
-                {#                    <a class="nav-link disabled">Disabled</a>#}
-                {#                </li>#}
-            </ul>
-            <form class="d-flex my-2 me-2" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-            <ul class="navbar-nav mb-2 mb-lg-0">
-                {% if not request.user.is_authenticated %}
-                    {% include 'navbar/navbar_parts/login_and_registration.html' %}
-                {% else %}
-                    {% include 'navbar/navbar_parts/user_menu.html' %}
-                {% endif %}
-            </ul>
+            {% include 'navbar/navbar_parts/links.html' %}
+            {#            <form class="d-flex my-2 me-2" role="search">#}
+            {#                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">#}
+            {#                <button class="btn btn-outline-success" type="submit">Search</button>#}
+            {#            </form>#}
+            {% include 'navbar/navbar_parts/user_menu.html' %}
         </div>
     </div>
 </nav>
