--- a/src/apps/profile/templates/edit_profile.html
+++ b/src/apps/profile/templates/edit_profile.html
@@ -7,7 +7,7 @@
 {% block title %}Edit profile{% endblock %}
 
 {% block styles %}
-        <link rel="stylesheet" href="{% static 'profiles/css/edit_profile.css' %}">
+    <link rel="stylesheet" href="{% static 'profiles/css/edit_profile.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -26,9 +26,23 @@
         <form method="post">
             {% csrf_token %}
             <div class="container">
-                <div class="row">
+                <div class="row row-cols-1 row-cols-md-3">
+                    {#                    <div class="col col-md-2">#}
+                    <div class="col text-center">
+                        <div class="row row-cols-1 row-cols-md-2"></div>
+                        <label for="id_photo" class="form-label"> Photo </label>
+                        <div class="col">
+                            <img src="https://source.unsplash.com/random/300x300?sig=1" class="img-thumbnail" alt="...">
+                        </div>
+                        <div class="col">
+                            <div class="input-group my-3">
+                                <input type="file" class="form-control" id="id_photo" name="photo">
+                            </div>
+                        </div>
+                    </div>
                     <div class="col">
-                        {{ user_form|crispy }}</div>
+                        {{ user_form|crispy }}
+                    </div>
                     <div class="col">
                         {{ profile_form|crispy }}
                     </div>
