--- a/src/apps/profile/templates/edit_profile.html
+++ b/src/apps/profile/templates/edit_profile.html
@@ -30,9 +30,9 @@
                     {#                    <div class="col col-md-2">#}
                     <div class="col text-center">
                         <div class="row row-cols-1 row-cols-md-2"></div>
-                        <label for="id_photo" class="form-label"> Photo </label>
+                        <label for="id_photo" class="form-label">Photo</label>
                         <div class="col">
-                            <img src="https://source.unsplash.com/random/300x300?sig=1" class="img-thumbnail" alt="...">
+                            <img src="{{ profile.photo.url }}" class="img-thumbnail" alt="...">
                         </div>
                         <div class="col">
                             <div class="input-group my-3">
