added image displaying for user

--- a/src/templates/navbar/navbar_parts/user_menu.html
+++ b/src/templates/navbar/navbar_parts/user_menu.html
@@ -29,5 +29,8 @@
                 </ul>
             </div>
         </li>
+{#        <li class="nav-item">#}
+{#            <img src="{{ request.user.profile.photo.url }}" alt="">#}
+{#        </li>#}
     {% endif %}
 </ul>
