--- a/src/apps/profile/templates/edit_profile.html
+++ b/src/apps/profile/templates/edit_profile.html
@@ -23,20 +23,25 @@
                 {{ error }}
             {% endif %}
         </div>
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="container">
                 <div class="row row-cols-1 row-cols-md-3">
-                    {#                    <div class="col col-md-2">#}
                     <div class="col text-center">
                         <div class="row row-cols-1 row-cols-md-2"></div>
                         <label for="id_photo" class="form-label">Photo</label>
                         <div class="col">
-                            <img src="{{ profile.photo.url }}" class="img-thumbnail" alt="...">
+                            {% if profile.photo %}
+                                <img src="{{ profile.photo.url }}" class="img-thumbnail"
+                                     alt="{{ profile.user.username }} profile">
+                            {% else %}
+                                <img src="{% static 'static/images/no-image.png' %}" class="img-thumbnail"
+                                     alt="{{ profile.user.username }} profile">
+                            {% endif %}
                         </div>
                         <div class="col">
                             <div class="input-group my-3">
-                                <input type="file" class="form-control" id="id_photo" name="photo">
+                                <input type="file" class="form-control" id="id_photo" accept="image/" name="photo">
                             </div>
                         </div>
                     </div>
