create command "create_purchases"

--- a/src/apps/profile/templates/edit_profile.html
+++ b/src/apps/profile/templates/edit_profile.html
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary">Apply changes</button>
+            <button type="submit" class="btn btn-success">Apply changes</button>
         </form>
         <hr>
         {% include 'delete_profile_button_modal.html' %}
