--- a/src/apps/rent/templates/rent/orders/clubs/club_rent.html
+++ b/src/apps/rent/templates/rent/orders/clubs/club_rent.html
@@ -4,16 +4,20 @@
     <div class="row g-0">
         <div class="col-md-4">
             {% if club_order.club.image %}
-                <img src="{{ club_order.club.image.url }}" class="img-fluid rounded-start" alt="{{ club_order.club.name }}">
+                <img src="{{ club_order.club.image.url }}" class="img-fluid rounded-start"
+                     alt="{{ club_order.club.name }}">
             {% else %}
-                <img src="{% static 'static/images/no-image.png' %}" class="img-fluid rounded-start" alt="No image">
+                {#                <img src="{% static 'static/images/no-image.png' %}" class="img-fluid rounded-start" alt="No image">#}
+                <img src="https://source.unsplash.com/random/350x350?sig={{ club_order.club.id }}" class="card-img-top"
+                     alt="{{ club_order.club.name }}">
             {% endif %}
         </div>
         <div class="col-md-8">
             <div class="card-body">
                 <h5 class="card-title">{{ club_order.club.name }}</h5>
                 <p class="card-text">Comment: {{ club_order.comment }}</p>
-                <p class="card-text"><small class="text-body-secondary">Was created at {{ club_order.created_at }}</small></p>
+                <p class="card-text"><small class="text-body-secondary">Was created
+                    at {{ club_order.created_at }}</small></p>
             </div>
         </div>
     </div>
