--- a/src/apps/rent/templates/rent/orders/clubs/club_rent.html
+++ b/src/apps/rent/templates/rent/orders/clubs/club_rent.html
@@ -14,6 +14,12 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
+                <div class="d-flex justify-content-between">
+                    <h5 class="card-title">{{ club_order.club.name }}</h5>
+                    {% if club_order.is_completed %}
+                        <h5 class="card-title text-success">Completed on {{ club_order.completed_date }}</h5>
+                    {% endif %}
+                </div>
                 <h5 class="card-title">{{ club_order.club.name }}</h5>
                 <p class="card-text">Comment: {{ club_order.comment }}</p>
                 <p class="card-text"><small class="text-body-secondary">Was created
