--- a/src/apps/rent/templates/rent/orders/clubs/club_order_list.html
+++ b/src/apps/rent/templates/rent/orders/clubs/club_order_list.html
@@ -10,7 +10,7 @@
 {% block title %}Club-Orders{% endblock %}
 
 {% block leftsidebar %}
-    {% include 'filter.html' %}
+    {% include 'rent/orders/clubs/filter.html' %}
 {% endblock %}
 
 {% block content %}
