--- a/src/templates/navbar/navbar.html
+++ b/src/templates/navbar/navbar.html
@@ -11,14 +11,9 @@
             {#                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">#}
             {#                <button class="btn btn-outline-success" type="submit">Search</button>#}
             {#            </form>#}
+{#            {% include 'navbar/navbar_parts/basket.html' %}#}
             {% include 'navbar/navbar_parts/user_menu.html' %}
-            <ul class="navbar-nav mb-2 mb-lg-0 ms-2">
-                <li class="nav-item">
-                    <img class="rounded border border-3 border-success" src="{{ request.user_profile.photo.url }}"
-                         alt="user_profile"
-                         style="width: 80px; height: 80px">
-                </li>
-            </ul>
+            {% include 'navbar/navbar_parts/user_photo.html' %}
         </div>
     </div>
 </nav>
