--- a/src/apps/shop/templates/product/product.html
+++ b/src/apps/shop/templates/product/product.html
@@ -12,7 +12,7 @@
                 <a href="{% url 'shop:about_product' product_id=product.id %}" class="btn btn-warning">About</a>
                 <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#product-{{ product.id }}">Buy
                 </button>
-                <a href="#" class="btn btn-secondary">Into the basket</a>
+                <a href="#" class="btn btn-secondary">Add to the basket</a>
                 {% include "product/product_modal.html" %}
             </div>
         </div>
