--- a/src/templates/navbar/navbar.html
+++ b/src/templates/navbar/navbar.html
@@ -11,9 +11,11 @@
             {#                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">#}
             {#                <button class="btn btn-outline-success" type="submit">Search</button>#}
             {#            </form>#}
-{#            {% include 'navbar/navbar_parts/basket.html' %}#}
+            {#            {% include 'navbar/navbar_parts/basket.html' %}#}
             {% include 'navbar/navbar_parts/user_menu.html' %}
-            {% include 'navbar/navbar_parts/user_photo.html' %}
+            {% if request.user.is_authenticated %}
+                {% include 'navbar/navbar_parts/user_photo.html' %}
+            {% endif %}
         </div>
     </div>
 </nav>
