--- a/src/templates/navbar/navbar_parts/user_menu.html
+++ b/src/templates/navbar/navbar_parts/user_menu.html
@@ -1,6 +1,13 @@
 <ul class="navbar-nav mb-2 mb-lg-0">
     {% if not request.user.is_authenticated %}
         <li class="nav-item">
+            <a class="btn btn-secondary px-5" href="{% url 'shop:basket_list' %}">Basket
+                {% if request.basket_quantity %}
+                    ({{ request.basket_quantity }})
+                {% endif %}
+            </a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="{% url 'login' %}">Login</a>
         </li>
         <li class="nav-item">
@@ -9,7 +16,10 @@
     {% else %}
         <li class="nav-item">
             <div class="btn-group" role="group">
-                <a class="btn btn-secondary px-5" href="{% url 'shop:basket' %}">Basket</a>
+                <a class="btn btn-secondary px-5" href="{% url 'shop:basket_list' %}">Basket
+                    {% if request.basket_quantity %}
+                        ({{ request.basket_quantity }})
+                    {% endif %}</a>
                 <div class="btn-group" role="group">
                     <button type="button" class="btn btn-success dropdown-toggle px-5" data-bs-toggle="dropdown"
                             aria-expanded="false">
