--- a/src/apps/shop/templates/product/product.html
+++ b/src/apps/shop/templates/product/product.html
@@ -3,17 +3,32 @@
         <form method="post" class="card-img-overlay">
             {% csrf_token %}
             <input type="hidden" name="add_product_to_basket" value="{{ product.id }}">
-            <button type="submit" class="btn btn-secondary">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-basket" width="24"
-                     height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                     stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                    <path d="M10 14a2 2 0 1 0 4 0a2 2 0 0 0 -4 0"></path>
-                    <path d="M5.001 8h13.999a2 2 0 0 1 1.977 2.304l-1.255 7.152a3 3 0 0 1 -2.966 2.544h-9.512a3 3 0 0 1 -2.965 -2.544l-1.255 -7.152a2 2 0 0 1 1.977 -2.304z"></path>
-                    <path d="M17 10l-2 -6"></path>
-                    <path d="M7 10l2 -6"></path>
-                </svg>
-            </button>
+            {% if product in products_in_basket %}
+                <button type="submit" class="btn btn-danger">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-basket" width="24"
+                         height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                         stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <path d="M10 14a2 2 0 1 0 4 0a2 2 0 0 0 -4 0"></path>
+                        <path d="M5.001 8h13.999a2 2 0 0 1 1.977 2.304l-1.255 7.152a3 3 0 0 1 -2.966 2.544h-9.512a3 3 0 0 1 -2.965 -2.544l-1.255 -7.152a2 2 0 0 1 1.977 -2.304z"></path>
+                        <path d="M17 10l-2 -6"></path>
+                        <path d="M7 10l2 -6"></path>
+                    </svg>
+                </button>
+            {% else %}
+                <button type="submit" class="btn btn-outline-danger">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-basket" width="24"
+                         height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                         stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <path d="M10 14a2 2 0 1 0 4 0a2 2 0 0 0 -4 0"></path>
+                        <path d="M5.001 8h13.999a2 2 0 0 1 1.977 2.304l-1.255 7.152a3 3 0 0 1 -2.966 2.544h-9.512a3 3 0 0 1 -2.965 -2.544l-1.255 -7.152a2 2 0 0 1 1.977 -2.304z"></path>
+                        <path d="M17 10l-2 -6"></path>
+                        <path d="M7 10l2 -6"></path>
+                    </svg>
+                </button>
+
+            {% endif %}
         </form>
         <img src="{{ product.image }}" class="card-img-top bg-white" alt="{{ product.name }}"
              style="height: 250px; object-fit: contain">
