--- a/src/apps/shop/templates/product/about_product.html
+++ b/src/apps/shop/templates/product/about_product.html
@@ -19,17 +19,16 @@
             <img src="{{ product.image }}" class="card-img-top bg-white" alt="{{ product.name }}"
                  style="height: 250px; object-fit: contain">
             <div class="card-header">
-                {{ product.price }} BYN
+                <div class="d-flex justify-content-between align-items-center">
+                    <div>{{ product.price }} BYN</div>
+                    <div>{% include 'product/product_parts/basket_button.html' %}</div>
+                </div>
             </div>
             <div class="card-body">
                 <h5 class="card-title">{{ product.name }}</h5>
                 <p class="card-text">{{ product.description }}</p>
                 <div class="d-grid gap-2 mx-auto">
-                    <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#product-{{ product.id }}">
-                        Buy
-                    </button>
-                    <a href="#" class="btn btn-secondary">Add to the basket</a>
-                    {% include "product/product_modal.html" %}
+                    <a href="{% url 'shop:order_page' product_id=product.id %}" class="btn btn-warning">Order</a>
                 </div>
             </div>
         </div>
