added address manage

--- a/src/templates/navbar/navbar_parts/user_menu.html
+++ b/src/templates/navbar/navbar_parts/user_menu.html
@@ -27,6 +27,7 @@
                     </button>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Edit profile</a></li>
+                        <li><a class="dropdown-item" href="{% url 'address:address_list' %}">Edit addresses</a></li>
                         <hr class="dropdown-divider">
                         <li><a class="dropdown-item" href="{% url 'shop:purchase_list' %}">Purchases</a></li>
                         <li>
